--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
+.cache
 .python-environments/
+\*butterfly\*
 ac-comphist.dat
 auto-save-list/
+custom.el
 elpa/
 eshell/
 network-security.data
 places
-projectile-bookmarks.eld
+projectile*
 recentf
-viper
-\*butterfly\*
 url
-.cache
-custom.el
+viper
